@@ -12,7 +12,6 @@ import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 import net.minecraft.world.level.storage.loot.predicates.LootItemConditionType;
 
-import java.util.Collections;
 import java.util.Set;
 
 /**
@@ -33,7 +32,7 @@ public final class BlockNamedEntityLootCondition implements LootItemCondition {
 
     @Override
     public Set<LootContextParam<?>> getReferencedContextParams() {
-        return Collections.singleton(LootContextParams.BLOCK_ENTITY);
+        return Set.of(LootContextParams.BLOCK_ENTITY);
     }
 
     @Override
