@@ -107,7 +107,7 @@ public class PocketServerComputer extends ServerComputer implements IPocketAcces
     @Override
     @Deprecated(forRemoval = true)
     public Map<ResourceLocation, IPeripheral> getUpgrades() {
-        return upgrade == null ? Collections.emptyMap() : Collections.singletonMap(upgrade.getUpgradeID(), getPeripheral(ComputerSide.BACK));
+        return upgrade == null ? Map.of() : Collections.singletonMap(upgrade.getUpgradeID(), getPeripheral(ComputerSide.BACK));
     }
 
     public @Nullable UpgradeData<IPocketUpgrade> getUpgrade() {
